syntax = "proto3";

option csharp_namespace = "Gateway.Web.Host.Protos.Authentications";

package authentications;

service AuthenticationGrpc {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message PUser {
  string Id = 1;
  string Username = 2;
  string Password = 3;
  string Email = 4;
  string PhoneNumber = 5;
  string Firstname = 6;
  string Lastname = 7;
  string Role = 8;
  string TenantId = 9;
  string CreatedAt = 10;
  string UpdatedAt = 11;
}

message PUserInfo {
  string UserId = 1;
  string Username = 2;
  string Role = 3;
  string TenantId = 4;
}

message LoginRequest {
  string Username = 1;
  string Password = 2;
}

message LoginResponse {
  string Token = 1;
}

message RegisterRequest {
  string Username = 1;
  string Password = 2;
  string Email = 3;
  string PhoneNumber = 4;
  string Firstname = 5;
  string Lastname = 6;
  string Role = 7;
  string TenantId = 8;
}

message RegisterResponse {
  bool Data = 1;
}

message ValidateTokenRequest {
  string Token = 1;
}

message ValidateTokenResponse {
  PUserInfo Data = 1;
}
